--- a/demo.html
+++ b/demo.html
@@ -329,10 +329,10 @@
       window.addEventListener("load", () => {
         const app = Vue.createApp({
           components: {
-            "x-context-menu": MiscVueComponents.ContextMenu,
-            "x-draggable": MiscVueComponents.Draggable,
-            "x-frame": MiscVueComponents.Frame,
-            "x-resizeable": MiscVueComponents.Resizeable,
+            "x-context-menu": MiscWebComponents.ContextMenu,
+            "x-draggable": MiscWebComponents.Draggable,
+            "x-frame": MiscWebComponents.Frame,
+            "x-resizeable": MiscWebComponents.Resizeable,
           },
 
           data() {
