--- a/demo.html
+++ b/demo.html
@@ -131,7 +131,7 @@
   </head>
   <body>
     <div id="app">
-      <h1>Miscellaneous Vue Components</h1>
+      <h1>Miscellaneous Web Components</h1>
 
       <section>
         <h2>
@@ -323,7 +323,6 @@
       </section>
     </div>
 
-    <script src="node_modules/vue/dist/vue.global.prod.js"></script>
     <script src="dist/misc-web-components.js"></script>
     <script>
       window.addEventListener("load", () => {
